--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
      <Compile Include="Assets\Scripts\CardMove.cs" />
      <Compile Include="Assets\Scripts\ControlCard.cs" />
      <Compile Include="Assets\Scripts\Menu.cs" />
+     <Compile Include="Assets\Scripts\SoundFade.cs" />
      <Compile Include="Assets\iTween\Plugins\iTween.cs" />
      <Compile Include="Assets\iTween\Sample\MoveSample.cs" />
      <Compile Include="Assets\iTween\Sample\RotateSample.cs" />
