--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -49,6 +49,7 @@
      <Compile Include="Assets\Scripts\ControlCard.cs" />
      <Compile Include="Assets\Scripts\ControlMenu.cs" />
      <Compile Include="Assets\Scripts\ControlSound.cs" />
+     <Compile Include="Assets\Scripts\ManagerLevel.cs" />
      <Compile Include="Assets\Scripts\SoundFade.cs" />
      <Compile Include="Assets\iTween\Plugins\iTween.cs" />
      <Compile Include="Assets\iTween\Sample\MoveSample.cs" />
